--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ https://templatemo.com/tm-585-barber-shop
 
                                     <div class="col-lg-8 col-12">
                                         <h1 style="font-size: 35PX;"><strong>ECOLE PROFESSIONNELLE <em> DU BARBER</em></strong></h1>
-                                        <h4 style="font-size: 20PX; color:rgb(255, 255, 255) ;"><strong>اضمن مقعدك في عالم الحلاقة الاحترافية.</strong></h4>
+                                        <h4 style="font-size: 20PX; color:rgb(255, 255, 255) ;"><strong> . اضمن مقعدك في عالم الحلاقة الاحترافية </strong></h4>
                                         <br>
                                
                           
